# simple_2D_game_engine

./: Cargo.toml
assets/shaders/: shader.fs  shader.vs  ui_shader.fs  ui_shader.vs
src/: camera.rs  editor.rs  engine.rs  entity.rs  input.rs  light.rs  main.rs  mesh.rs  object.rs  octave-workspace  player.rs  render_engine.rs  resources.rs  scene.rs  shader.rs  text.rs  text_mesh.rs  texture.rs  ui.rs  ui_entity.rs  ui_object.rs
